fix: theorem and details adapt dark mode

--- a/styles/custom-blocks.styl
+++ b/styles/custom-blocks.styl
@@ -30,7 +30,7 @@
     margin 1rem 0
     padding .1rem 1.5rem
     border-radius 0.4rem
-    background-color #f0f4f8
+    background-color var(--code-color)
     .title
       font-weight bold
   &.details
@@ -39,7 +39,7 @@
     border-radius 2px
     margin 1em 0
     padding 1rem
-    background-color #eee
+    background-color var(--code-color)
     h4
       margin-top 0
     figure, p
